--- a/Project.toml
+++ b/Project.toml
@@ -13,3 +13,4 @@ Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
