--- a/Project.toml
+++ b/Project.toml
@@ -17,5 +17,6 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
+NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
