Added some further changes to the plotting

--- a/Project.toml
+++ b/Project.toml
@@ -22,3 +22,4 @@ MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+SwarmMakie = "0b1c068e-6a84-4e66-8136-5c95cafa83ed"
